<resources>
    <string name="app_name">AllVideoDownloaderRevolt</string>
    <string name="network_alert">Your internet is not available, please try again later</string>
    <string name="ok">OK</string>
    <string name="dialog_ok">Ok</string>
    <string name="all_video">ALL VIDEO</string>
    <string name="downloader">DOWNLOADER</string>
    <string name="english">ENGLISH</string>
    <string name="available_for_everyone">Available for everyone..</string>
    <string name="hindi">HINDI</string>
    <string name="language_scr_text"><![CDATA[Best video Downloader with Top music download likes Hollywood song, Bollywood song, Hindi songs, English songs and old & new song in both language.\n\nIf you are looking for powerful video downloader manager, try this video downloader manager, you won\'t regret it!\n\nThe powerful download manager downloads in the background and downloads several files at the same time. preview the video first and fast downloads.\n\nThis HD video downloader is the best video downloader for social webs. Just play any video on social media and download it in high quality in one click.]]></string>
    <string name="free_premium_scr_text">All video Downloader provided in Free and premium Features, All features 100% free, No limited skips, no accounts and free access all features.\n\nThis easy-to-use social media video downloader, you can browse all social websites and download all HD videos for your own social media accounts. All formats are supported.\n\nThis is the fastest video downloader Application that helps you search and download your favorite type of video and gives an attractive user interface with the best user experience.\n\nSmart Video Search Keyword Suggestion option available. You can Easily download video from Instagram, Facebook, Twitter, WhatsApp, WA Business, Josh, Tiki, Chingari, Vimeo, Rizzle, Imgur. Support different formats Like mp4, 3gp, m4a, mp3, flv, mov, wmv, mkv, avi, etc…</string>
    <string name="free">FREE</string>
    <string name="premium">PREMIUM</string>
    <string name="status_saver">Status Saver</string>
    <string name="video_player">Video Player</string>
    <string name="live_video_call">LIVE VIDEO CALL</string>
    <string name="save_status">STATUS SAVER</string>
    <string name="video_player_title">VIDEO PLAYER</string>
    <string name="video_downloader">VIDEO DOWNLOADER</string>
    <string name="video_downloader_title">Video Downloader</string>
    <string name="live_video_call_text">Live video call with friends</string>
    <string name="status_saver_text">Save your WhatsApp Status</string>
    <string name="video_player_text">Play videos in all formats</string>
    <string name="video_downloader_text">All Social Media Video Download</string>
    <string name="no_data_found">No data found</string>
    <string name="unknown">Unknown</string>
    <string name="single">Single</string>
    <string name="app_not_installed">App not installed</string>
    <string name="app_not_installed2">WhatsApp is not installed in your device</string>
    <string name="paste_link_to_download_video">Paste link to download video</string>
    <string name="paste_link_here">Paste link here....</string>
    <string name="my_downloads">My Downloads</string>
    <string name="how_to_use">How To Use</string>
    <string name="roposo">Roposo</string>
    <string name="chingari">Chingari</string>
    <string name="twitter">Twitter</string>
    <string name="whatsApp">WhatsApp</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="enter_url">Please enter URL</string>
    <string name="valid_url">Please enter valid URL</string>
    <string name="please_wait_we_are_downloading">Please wait we are downloading your file</string>
    <string name="select_your_room">Select Your Room</string>
    <string name="find_match">Find Match</string>
    <string name="do_you_want_to_block_user">Do you want to block user?</string>
    <string name="video_call">Video Call</string>
    <string name="video">Video</string>
    <string name="videos">Videos</string>
    <string name="gallery">Gallery</string>
    <string name="sharechat">ShareChat</string>
    <string name="download">Download</string>
    <string name="paste">Paste</string>
    <string name="how_to_download">How to Download</string>
    <string name="_1_copy_video_link_from_sharechat">1. Copy video link from %s</string>
    <string name="_2_open_all_in_one_status_saver">2. Open all in one status saver</string>
    <string name="paste_url">Paste URL</string>
    <string name="photo">Photos</string>
    <string name="roundImage">Image</string>
    <string name="music">Music</string>
    <string name="tiki">Tiki</string>
    <string name="josh">Josh</string>
    <string name="exit_msg">Are you sure you want to exit from app?</string>
    <string name="rate_now">Rate Now</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="thank_you_for_using_our_app">Thank you for using our app!!</string>
    <string name="download_the_app">Download The App</string>
    <string name="cancel">Cancel</string>
    <string name="note">Note</string>
    <string name="download_completed">Download complete</string>
    <string name="loading">Loading....</string>
    <string name="An_update">An update for the application is available</string>
    <string name="update">Update</string>
    <string name="vimeo">Vimeo</string>
    <string name="ad_space">Ad Space</string>
    <string name="toast_stg_wrong">Something is wrong..!!</string>
    <!--For FB Event Manager-->
    <string name="facebook_app_id">1640544443084560</string>
    <string name="fb_login_protocol_scheme">fb1640544443084560</string>
    <string name="facebook_client_token">da2c70494403eedce29a5022bbd17d28</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_all_video_player">AllVideoPlayerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>