<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayoutDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_55sdp"
            android:background="@drawable/ic_dialog_box_top_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDialogMainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_120sdp"
                android:fontFamily="@font/worksans_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/download_the_app"
                android:textColor="@color/colorBlackBean"
                android:textSize="@dimen/_22ssp" />

            <TextView
                android:id="@+id/txtDialogDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/worksans_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/app_name"
                android:textColor="@color/colorSpunPearl"
                android:textSize="@dimen/_16ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUriDataDownloads"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_49sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/light_green_shadow_box"
                android:fontFamily="@font/worksans_semibold"
                android:includeFontPadding="false"
                android:text="@string/download"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_49sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/light_green_shadow_box"
                android:backgroundTint="#FF5F48"
                android:fontFamily="@font/worksans_semibold"
                android:includeFontPadding="false"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/rImgDownloadLogo"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/_5sdp"
            android:src="@mipmap/ic_launcher"
            app:riv_oval="true" />
    </RelativeLayout>

</LinearLayout>