<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".act.ExitAct">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_icon_exit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/worksans_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/exit_msg"
                android:textColor="@color/colorBlackBean"
                android:textSize="@dimen/_16ssp" />

            <include
                android:id="@+id/allMainSelectionInclude"
                layout="@layout/custom_native_view_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRateNowApp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/blue_gradient_8sdp_bg"
                android:fontFamily="@font/worksans_semibold"
                android:includeFontPadding="false"
                android:text="@string/rate_now"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAppYes"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/sky_border_bg_10sdp"
                    android:fontFamily="@font/worksans_semibold"
                    android:includeFontPadding="false"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@color/colorDodgerBlue"
                    android:textSize="@dimen/_16ssp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAppNo"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/sky_border_bg_10sdp"
                    android:fontFamily="@font/worksans_semibold"
                    android:includeFontPadding="false"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/colorDodgerBlue"
                    android:textSize="@dimen/_16ssp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>