<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".act.AllDownloadsAct">

    <include layout="@layout/tool_bar_item"
        android:id="@+id/toolBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_15sdp_top_bg"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

            <LinearLayout
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linkDownloadBoxBg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/lavender_blush_15sdp_bg"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgDownloadLogo"
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="@dimen/_60sdp"
                            android:background="@drawable/white_circle_bg"
                            android:backgroundTint="@color/colorRose"
                            android:padding="@dimen/_2sdp"
                            android:src="@drawable/sharechat_logo" />

                        <TextView
                            android:id="@+id/txtDownloadTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:fontFamily="@font/worksans_bold"
                            android:includeFontPadding="false"
                            android:text="@string/sharechat"
                            android:textColor="@color/colorDeepSky"
                            android:textSize="@dimen/_20ssp" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/edtWebURL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/black_border_with_white_7sdp_bg"
                        android:fontFamily="@font/worksans_semibold"
                        android:hint="@string/paste_url"
                        android:imeOptions="actionDone"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:padding="@dimen/_14sdp"
                        android:textColor="@color/colorBlackBean"
                        android:textColorHint="@color/colorLightGray"
                        android:textSize="@dimen/_13ssp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnUriDataDownloads"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_weight="1"
                            android:background="@drawable/sky_border_bg_10sdp"
                            android:fontFamily="@font/worksans_semibold"
                            android:includeFontPadding="false"
                            android:text="@string/download"
                            android:textAllCaps="false"
                            android:textColor="@color/colorDeepSky"
                            android:textSize="@dimen/_16ssp" />

                        <View
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="wrap_content" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnUriDataPaste"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_weight="1"
                            android:background="@drawable/sky_bg_10sdp"
                            android:fontFamily="@font/worksans_semibold"
                            android:includeFontPadding="false"
                            android:text="@string/paste"
                            android:textAllCaps="false"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_16ssp" />
                    </LinearLayout>
                </LinearLayout>

                <include
                    android:layout_marginTop="@dimen/_10sdp"
                    android:id="@+id/allMainSelection_medium_bottom"
                    layout="@layout/custom_native_view_item"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/_minus8sdp"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/worksans_medium"
                    android:includeFontPadding="false"
                    android:text="@string/how_to_download"
                    android:textColor="@color/colorBlackBean"
                    android:textSize="@dimen/_16ssp" />


                <TextView
                    android:id="@+id/txtFrImageTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/worksans_medium"
                    android:includeFontPadding="false"
                    android:text="@string/_1_copy_video_link_from_sharechat"
                    android:textColor="@color/colorBlackBean"
                    android:textSize="@dimen/_13ssp" />

                <ImageView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_download_path_1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/worksans_medium"
                    android:includeFontPadding="false"
                    android:text="@string/_2_open_all_in_one_status_saver"
                    android:textColor="@color/colorBlackBean"
                    android:textSize="@dimen/_13ssp" />

                <ImageView
                    android:id="@+id/imgLogoDefault"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share_download" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</LinearLayout>